# po-processing

./: README.md  app.py  app.yaml  pyproject.toml
deployment/: README.md
eval/: compare_postprocessing.py  eval.py
invoice_processing/: __init__.py  agent.py
invoice_processing/core/: config.py  llm_client.py  rule_discoverer.py
invoice_processing/shared_libraries/: alf_engine.py
invoice_processing/shared_libraries/acting/: general_invoice_agent.py
invoice_processing/shared_libraries/investigation/: investigate_agent_reconst.py
invoice_processing/tools/: tools.py
po_dash/: __init__.py  callbacks_inference.py  callbacks_learning.py  components.py  layout.py
po_processing/: .env.example  __init__.py  agent.py  prompt.py
po_processing/core/: __init__.py  case_loader.py  config.py  llm_client.py  prompts.py  rule_discoverer.py  storage.py
po_processing/data/: reconstructed_rules_book.md  rule_discovery_cache.json
po_processing/exemplary_data/case_001/: Postprocessing_Data.json  case_metadata.json
po_processing/exemplary_data/case_002/: Postprocessing_Data.json  case_metadata.json
po_processing/exemplary_data/case_005/: Postprocessing_Data.json  case_metadata.json
po_processing/shared_libraries/: alf_engine.py  master_data_loader.py  po_master_data.yaml
po_processing/shared_libraries/acting/: general_po_agent.py
po_processing/shared_libraries/investigation/: investigate_agent_reconst.py
po_processing/tools/: tools.py
tests/: conftest.py  test_action_executor.py  test_alf_engine.py  test_condition_evaluator.py  test_impact_assessor.py  test_rule_writer.py
(+9 files in other folders)
